# scrapefruit

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md  build_exe.bat  config.py  create_shortcut.ps1  install_shortcut.bat  main.py  make_shortcut.ps1  pyproject.toml  pytest.ini  requirements.txt  run_dev.py  run_server.py  scrapefruit.spec
.github/workflows/: auto-label.yml  deploy.yml
api/: __init__.py
api/middleware/: __init__.py  error_handler.py  exceptions.py
api/routes/: database.py  export.py  jobs.py  scraping.py  settings.py
core/: __init__.py  config.py  container.py
core/jobs/: __init__.py  orchestrator.py  worker.py
core/llm/: __init__.py  service.py
core/output/: __init__.py  report_generator.py
core/patterns/: __init__.py  circuit_breaker.py
core/poison_pills/: __init__.py  detector.py  types.py
core/scraping/: __init__.py  accessibility_analyzer.py  analyzer.py  engine.py  network_analyzer.py
database/: connection.py
database/repositories/: __init__.py  base.py  job_repository.py  result_repository.py  rule_repository.py  settings_repository.py  url_repository.py
docs/: SYNTHESIS_REPORT.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/about/: index.html
docs/assets/: styles.css
docs/manual/: index.html
docs/updates/: index.html
models/: __init__.py  job.py  result.py  rule.py  settings.py  template.py  url.py
static/: index.html
static/css/: main.css
static/js/: api.js  app.js  state.js  types.js
tests/: __init__.py  conftest.py  test_live_scraping.py
utils/: logger.py
(+42 files in other folders)
